page 1 and page 2 add

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <div class="body">
         
         <div class="welcome">
-            <div class="header_image">
-                <img src="imagens/logo.jpeg" alt="">
-            </div>
                     <div class="welcome_content">
                         <div class="welcome_text">
                             <h1>Confiança <br> Evolução <br> Gerenciamento </h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, tempora excepturi adipisci labore libero aliquid omnis nulla ea corporis esse quasi assumenda animi beatae reprehenderit, nostrum nisi optio sed dicta?</p>
-                        </div>
-                        <div class="welcome_button">
-                            <button> Conheça nosso serviços!</button>
+                            <div class="welcome_button">
+                                <button> Conheça nosso serviços!</button>
+                            </div>
                         </div>
                     </div>
                     <div class="welcome_image">
@@ -29,8 +26,28 @@
         </div>
 
         <div class="how_help_you">
-            <h1>Como vamos <br>te ajudar a <br> crescer </h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure animi consequatur expedita quas necessitatibus sapiente quasi, quidem doloribus distinctio similique impedit minus harum eos. Fugit reprehenderit ipsum sapiente laborum nesciunt.</p>
+            <div class="how_help_content">
+                <h1>Como vamos <br>te ajudar a <br> crescer ?</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure animi consequatur expedita quas necessitatibus sapiente quasi, quidem doloribus distinctio similique impedit minus harum eos. Fugit reprehenderit ipsum sapiente laborum nesciunt.</p>
+            </div>
+            <div class="content_services">
+                <div class="group1">
+                    <div class="service1">
+
+                    </div>
+                    <div class="service2">
+
+                    </div>
+                </div>
+                <div class="group2">
+                    <div class="service3">
+
+                    </div>
+                    <div class="service4">
+
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="who_we_are">
