Coloquei os services, porém está o h1 oculto e o code está apontando algum erro

--- a/index.html
+++ b/index.html
@@ -32,18 +32,26 @@
             </div>
             <div class="content_services">
                 <div class="group1">
-                    <div class="service1">
+                    <div class="service1" >
+                        <h1>Tráfego Pago</h1>
+                        <p> Indonesia's consumer class is projected to triple by 2030</p>
 
                     </div>
                     <div class="service2">
+                        <h1>Copywrrint</h1>
+                        <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
                 </div>
                 <div class="group2">
                     <div class="service3">
+                        <h1>Social Media</h1>
+                        <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
                     <div class="service4">
+                        <h1>Designer</h1>
+                        <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
                 </div>
