--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                             <h1>Confiança <br> Evolução <br> Gerenciamento </h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, tempora excepturi adipisci labore libero aliquid omnis nulla ea corporis esse quasi assumenda animi beatae reprehenderit, nostrum nisi optio sed dicta?</p>
                             <div class="welcome_button">
-                                <button> Conheça nosso serviços!</button>
+                                <button> <a href="#">Conheça nosso serviços!</a></button>
                             </div>
                         </div>
                     </div>
                     <div class="welcome_image">
-                        <img src="" alt="">
+                        <img src="imagens/Logo Empresa.png" alt="">
                     </div>
         </div>
 
@@ -33,24 +33,28 @@
             <div class="content_services">
                 <div class="group1">
                     <div class="service1" >
-                        <h1>Tráfego Pago</h1>
+                        <img src="imagens/megafone.png" alt="">
+                        <h2>Tráfego Pago</h2>
                         <p> Indonesia's consumer class is projected to triple by 2030</p>
 
                     </div>
                     <div class="service2">
-                        <h1>Copywrrint</h1>
+                        <img src="imagens/caneta.png" alt="">
+                        <h2>Copywriter</h2>
                         <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
                 </div>
                 <div class="group2">
                     <div class="service3">
-                        <h1>Social Media</h1>
+                        <img src="imagens/intagram.png " alt="">
+                        <h2>Social Media</h2>
                         <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
                     <div class="service4">
-                        <h1>Designer</h1>
+                        <img src="imagens/design.png" alt="">
+                        <h2>Designer</h2>
                         <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
 
                     </div>
@@ -59,7 +63,14 @@
         </div>
 
         <div class="who_we_are">
-            <h1>Quem <span>somos nós</span></h1>
+            <div class="who_we_are_content">
+                <h1>Quem nós somos ?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam nulla deserunt suscipit pariatur fuga illo? Illum, cumque, beatae officiis consectetur omnis voluptates nemo eos sunt exercitationem adipisci, necessitatibus quasi! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem molestiae omnis esse nesciunt reprehenderit, quis ea, at adipisci tempore eaque, illo enim labore explicabo tempora. Exercitationem cum nulla aperiam architecto.</p>
+            </div>
+
+            <div class="who_we_are_img">
+                <img src="imagens/office.jpg" alt="">
+            </div>
         </div>
 
         <div class="our_team">
