Coloquei as div´s dos nomes
Coloquei as div´s com a nossa equipe

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
         <div class="our_team">
             <h1>Nosso time</h1>
         </div>
+        <div class="our_team_content">
+
+        </div>
+        <div class="our_team_divs">
+            <div class="murilo">
+                <img src="" alt="">
+            </div>
+            <div class="nicolas"></div>
+            <div class="mateus"></div>
+            <div class="tiago_"></div>
+            <div class="bandeira"></div>
+        </div>
     </div>
 </body>
 </html>
