Declarei sua div, sua foto. Mas não consegui posicionar correto.
Caso precise do que eu coloquei antes da div dos nomes ta aí:
<div class="nicolas">
               <img src="/imagens/nicolas.jpg" alt="Foto do Nicolas">
                </div>
                <div class="mateus">
                    <img src="/imagens/murilo.jpg" alt="Foto do Mateus">
                </div>
                <div class="tiago_">
                    <img src="/imagens/nicolas.jpg" alt="Foto do Tiago">
                </div>
                <div class="bandeira">
                    <img src="/imagens/murilo.jpg" alt="Foto do Bandeira">
                </div>

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
         </div>
 
         <div class="our_team">
-            <h1>Nosso time</h1>
-        </div>
-        <div class="our_team_content">
 
-        </div>
-        <div class="our_team_divs">
+          <div class="our_team_content">
+            <h1>Nosso time</h1>
+          </div>
+          <div class="our_team_divs">
             <div class="murilo">
-                <img src="" alt="">
+                <img src="/imagens/murilo.jpg" alt="Foto do Murilo">
             </div>
-            <div class="nicolas"></div>
-            <div class="mateus"></div>
-            <div class="tiago_"></div>
-            <div class="bandeira"></div>
+            
+
+
+          </div>
+        
         </div>
-    </div>
+
 </body>
 </html>
