--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="service2">
                         <img src="imagens/caneta.png" alt="">
                         <h2>Copywriter</h2>
-                        <p>The demand for food will increase significantly as more consumers in emerging economies enter the middle class.</p>
+                        <p>The demand for food will increase significantly as more consumers in emerging enter.</p>
 
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     <div class="service4">
                         <img src="imagens/design.png" alt="">
                         <h2>Designer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut repellat atque!     mmmmmmDic ta maiores expedita, inventore, </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut repellat atque!</p>
 
                     </div>
                 </div>
