--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <div class="whatsapp">
         <p>Entre em contato!</p>
-        <a href="#"><img src="imagens/whatsapp.webp" alt=""></a>
+        <a href="#"><img src="imagens/whatsaap.png""></a>
       </div>
 </div>
 </body>
