footer done ipad media done

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <div class="como_vamos_te_ajudar">
         <div class="comoteajudar_text">
-            <h1>Como vamos <br> te ajudar a <br> crescer?</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque atque tenetur quas. Hic asperiores, odit vero necessitatibus aliquid dolore ab voluptate tempore consequatur provident, dolorem harum? Sequi cupiditate eum assumenda?</p>
+            <h1>Como vamos te ajudar a  crescer?</h1>
+            <p>Lorem ipsum dolor, sit amet consecic asperiores, odit vero necessitatibus aliquid dolore ab voluptate tempore consequatur provident, dolorem harum? Sequi cupiditate eum assumenda?</p>
         </div>
 
         <div class="comoteajudar_servicos">
@@ -65,7 +65,7 @@
     <div class="quem_somos_nos">
         <div class="quem_somos_nos_text">
             <h1>Quem somos nós?</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem in temporibus necessitatibus sunt! Modi aspernatur odit quaerat eaque voluptatum veniam rem maiores, fugit ea voluptates autem deserunt cupiditate numquam. Eum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo soluta minima fugit nulla itaque, voluptatum autem, totam repellendus nesciunnt ullam molestiae dolorem aspernatur. Velit unde doam pariatur corporis tenetur. Perferendis aliquam similique ipsum.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem in temporibus necessitatibus sunt! Modi asconsectetur adipisicing elit. Illo soluta minima pellendus nesciunnt ullam molestiae dolorem aspernatur. Velit unde doam pariatur corporis tenetur. Perferendis aliquam similique ipsum.</p>
         </div>
     
         <div class="quem_somos_nos_img">
@@ -120,6 +120,12 @@
       <div class="whatsapp">
         <a href="#"><img src="imagens/whatsapp-logo.png"></a>
       </div>
+      
+      <div class="nossasredes">
+        <a href="#" target="blank"><img src="imagens/whats png.png" alt=""></a>
+        <a href="#" target="blank"><img src="imagens/insta png.png" alt=""></a>
+    </div>
+
     </div>
 </body>
 </html>
