--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             </div>
             <div class="servicos">
-                <img src="imagens/intagram.png"  alt="">
+                <img src="imagens/instagram.png"  alt="">
                 <h2>Social Media</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 
@@ -120,7 +120,7 @@
       <div class="whatsapp">
         <a href="#"><img src="imagens/whatsapp-logo.png"></a>
       </div>
-      
+
       <div class="nossasredes">
         <a href="#" target="blank"><img src="imagens/whats png.png" alt=""></a>
         <a href="#" target="blank"><img src="imagens/insta png.png" alt=""></a>
