--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
 
-    <div class="bemvindo">
-        <img src="imagens/Logo Empresa.png" alt=""> 
+    <div id="pg1" class="bemvindo">
+        <div class="header">
+            <img src="imagens/Logo Empresa.png" alt="">
+            <div class="header_links">
+                <ul>
+                    <li><a href="#pg1">Home</a></li>
+                    <li><a href="#pg2">Serviços</a></li>
+                    <li><a href="#pg3">Quem Somos</a></li>
+                    <li><a href="#pg4">Time</a></li>
+                </ul>
 
+            </div>
+        </div>
         <div class="bemvindocontent">
             <h1>Confiança <br>
             Evolução <br>
@@ -24,7 +34,7 @@
     </div>
 
 
-    <div class="como_vamos_te_ajudar">
+    <div id="pg2" class="como_vamos_te_ajudar" >
         <div class="comoteajudar_text">
             <h1>Como vamos te ajudar a  crescer?</h1>
             <p>Lorem ipsum dolor, sit amet consecic asperiores, odit vero necessitatibus aliquid dolore ab voluptate tempore consequatur provident, dolorem harum? Sequi cupiditate eum assumenda?</p>
@@ -62,7 +72,7 @@
 
     </div>
 
-    <div class="quem_somos_nos">
+    <div class="quem_somos_nos" id="pg3">
         <div class="quem_somos_nos_text">
             <h1>Quem somos nós?</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem in temporibus necessitatibus sunt! Modi asconsectetur adipisicing elit. Illo soluta minima pellendus nesciunnt ullam molestiae dolorem aspernatur. Velit unde doam pariatur corporis tenetur. Perferendis aliquam similique ipsum.</p>
@@ -74,7 +84,7 @@
     
     </div>
 
-    <div class="nosso_time">
+    <div class="nosso_time" id="pg4">
         <div class="text_nosso_time">
             <h1>Nosso Time</h1>
         </div>
@@ -116,15 +126,16 @@
             </div>
         </div>
       </div>
+      
+      <div class="nossasredes">
+        <a href="#" target="blank"><img src="imagens/whats png.png" alt=""></a>
+        <a href="#" target="blank"><img src="imagens/insta png.png" alt=""></a>
+    </div>
 
       <div class="whatsapp">
         <a href="#"><img src="imagens/whatsapp-logo.png"></a>
       </div>
 
-      <div class="nossasredes">
-        <a href="#" target="blank"><img src="imagens/whats png.png" alt=""></a>
-        <a href="#" target="blank"><img src="imagens/insta png.png" alt=""></a>
-    </div>
 
     </div>
 </body>
