--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
             </div>
         </div>
         <div class="bemvindocontent">
-            <h1>Confiança <br>
-            Evolução <br>
-            Gerenciamento</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi recusandae deleniti totam sed nam nulla cupiditate porro est. Aut aliquid beatae doloribus ipsam in vitae expedita cumque quae unde libero!</p>
-            <button><a href="#">Conheça nosso serviços!</a></button>
+            <div class="bemvindotext">
+                <h1>Confiança <br>
+                Evolução <br>
+                Gerenciamento</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi recusandae deleniti totam sed nam nulla cupiditate porro est. Aut aliquid beatae doloribus ipsam in vitae expedita cumque quae unde libero!</p>
+                <button><a href="#">Conheça nosso serviços!</a></button>
+            </div>
+            <div class="bemvindoimg">
+                <img src="imagens/mockup site CE.png" alt="mockup">
+            </div>
         </div>
 
     </div>
