--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             </div>
         </div>
         <div class="bemvindocontent">
-            <h1>Confiança <br>
-            Evolução <br>
-            Gerenciamento</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi recusandae deleniti totam sed nam nulla cupiditate porro est. Aut aliquid beatae doloribus ipsam in vitae expedita cumque quae unde libero!</p>
-            <button><a href="#">Conheça nosso serviços!</a></button>
+            <div class="bemvindotext">
+                <h1>Confiança <br>
+                Evolução <br>
+                Gerenciamento</h1>
+                <p>Estamos comprometidos em oferecer soluções personalizadas e eficazes para ajudar nossos clientes a alcançarem seus objetivos, utilizamos as mais recentes técnicas e estratégias de marketing, publicidade online, marketing de mídia social e muito mais, para ajudar nossos clientes a atrair novos clientes, e, finalmente, alcançar o crescimento desejado.</p>
+                <button><a href="#">Conheça nosso serviços!</a></button>
+            </div>
+                <div class="mockup"><img src="imagens/mockup png.png" alt=""></div>
         </div>
 
     </div>
@@ -37,7 +40,8 @@
     <div id="pg2" class="como_vamos_te_ajudar" >
         <div class="comoteajudar_text">
             <h1>Como vamos te ajudar a  crescer?</h1>
-            <p>Lorem ipsum dolor, sit amet consecic asperiores, odit vero necessitatibus aliquid dolore ab voluptate tempore consequatur provident, dolorem harum? Sequi cupiditate eum assumenda?</p>
+            <p> A nossa equipe de especialistas está sempre pronta para compreender suas necessidades e ajudá-lo a construir uma estratégia de marketing personalizada e eficaz para sua empresa. <br>
+            Com o uso de técnicas avançadas, a sua empresa vai sempre estar à frente da concorrência e alcance seus objetivos de negócios. Nós também trabalhamos de perto com você para medir os resultados e garantir que você esteja sempre no caminho certo.</p>
         </div>
 
         <div class="comoteajudar_servicos">
@@ -45,27 +49,26 @@
             <div class="servicos">
                 <img src="imagens/megafone.png"  alt="">
                 <h2>Gestor de Tráfego</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                
+                <p>O Gestor de tráfego é responsável pelo crescimento do site no google e campanhas nas redes sociais.</p>
                 </div>
 
             <div class="servicos">
                 <img src="/imagens/caneta.png" alt="">
                 <h2>Copywriter</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p>O Copywriter é responsável pela escrita de posts e atingir público alvo e gerando emoção no cliente.</p> 
 
             </div>
             <div class="servicos">
                 <img src="imagens/instagram.png"  alt="">
                 <h2>Social Media</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p>O Social media é responsável pela criação de reels e storys atendimento ao cliente e gerenciamento das suas redes sociais.</p>
 
             </div>
             <div class="servicos">
                 <img src="/imagens/design.png"" alt="">
                 <h2>Designer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-
+                <p>O Designer é responsável pela identidade visual da empresa, como criação de logos, cores e composição visual.
+                </p>
             </div>
 
         </div>
@@ -75,7 +78,7 @@
     <div class="quem_somos_nos" id="pg3">
         <div class="quem_somos_nos_text">
             <h1>Quem somos nós?</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem in temporibus necessitatibus sunt! Modi asconsectetur adipisicing elit. Illo soluta minima pellendus nesciunnt ullam molestiae dolorem aspernatur. Velit unde doam pariatur corporis tenetur. Perferendis aliquam similique ipsum.</p>
+            <p> A Confidence Evolution é uma agência de marketing digital com soluções inovadoras e de alta qualidade para os nossos clientes. Com uma equipe altamente capacitada e comprometida, trabalhamos incansavelmente para entregar soluções para sua empresa. Juntos, estamos sempre buscando maneiras de melhorar e expandir seus negócios.</p>
         </div>
     
         <div class="quem_somos_nos_img">
