bug de rolagem resolvido

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="comoteajudar_text">
             <h1>Como vamos te ajudar a  crescer?</h1>
             <p> A nossa equipe de especialistas está sempre pronta para compreender suas necessidades e ajudá-lo a construir uma estratégia de marketing personalizada e eficaz para sua empresa. <br>
-            Com o uso de técnicas avançadas, a sua empresa vai sempre estar à frente da concorrência e alcance seus objetivos de negócios. Nós também trabalhamos de perto com você para medir os resultados e garantir que você esteja sempre no caminho certo.</p>
+            Com o uso de técnicas avançadas, a sua empresa vai sempre estar à frente da concorrência e alcance seus objetivos de negócios.</p>
         </div>
 
         <div class="comoteajudar_servicos">
