--- a/index.html
+++ b/index.html
@@ -81,61 +81,68 @@
 
         <div class="plans">
             <div class="plan">
-                <h2>Premium</h2>
-                <p>Otimizar o processo de gestão de redes sociais e construir uma identidade visual profissional e um bom conteúdo de forma ágil em suas redes.</p>
-                <h2 class="price">R$ 639,99</h2>
-                <div class="plantext">
-                    <h2>O que está incluso ?</h2>
-                    <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégia editorial</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 30min/mês</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:3 posts 1 reels e 3 stories por semana!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>2 rodadas de alteração previstas para cada post</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Criar uma identidade visual para sua marca</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Designer Gráfico, Social media e Copywriting)</p>
+                <div class="plan_content">
+                    <h2>Premium</h2>
+                    <p>Otimizar o processo de gestão de redes sociais e construir uma identidade visual profissional e um bom conteúdo de forma ágil em suas redes.</p>
+                    <h2 class="price">R$ 639,99</h2>
+                    <button id="button">O que está incluso ? <span class="material-symbols-outlined">
+                        expand_more
+                        </span></button>
+                    <div class="plantext">
+                        <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégia editorial</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 30min/mês</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:3 posts 1 reels e 3 stories por semana!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>2 rodadas de alteração previstas para cada post</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Criar uma identidade visual para sua marca</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Designer Gráfico, Social media e Copywriting)</p>
+                    </div>
                 </div>
             </div>
 
             <div class="plan" id="plan_midle">
-                <h2>Plus</h2>
-                <p>
-                    impulsionar o processo de gestão de redes sociais, alcançando mais pessoas e 
-                    personalizando os nossos serviços para sua empresa, gerando mais engajamento 
-                    e clientes nas suas redes sociais.</p>
-                <h2 class="price">R$ 979,99</h2>
-
-                <div class="plantext">
-                    <h2>O que está incluso ?</h2>
-                    <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias personalizadas para sua empresa</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 1hr/mês</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:4 posts 1 reels e 4 stories por semana!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>3 rodadas de alteração previstas para cada post</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span> Criar uma identidade visual exclusiva para sua empresa
-                    </p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Gestão de conteúdo pago para impulsionamentos e campanhas de anúncios.</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Gestão de Tráfego, Designer Gráfico, Social media e Copywriting) </p>
+                <div class="plan_content">
+                    <h2>Plus</h2>
+                    <p>
+                        impulsionar o processo de gestão de redes sociais, alcançando mais pessoas e
+                        personalizando os nossos serviços para sua empresa, gerando mais engajamento
+                        e clientes nas suas redes sociais.</p>
+                    <h2 class="price">R$ 979,99</h2>
+                    <button id="button">O que está incluso ?</button>
+                    <div class="plantext">
+                        <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias personalizadas para sua empresa</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 1hr/mês</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:4 posts 1 reels e 4 stories por semana!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>3 rodadas de alteração previstas para cada post</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span> Criar uma identidade visual exclusiva para sua empresa
+                        </p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Gestão de conteúdo pago para impulsionamentos e campanhas de anúncios.</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Gestão de Tráfego, Designer Gráfico, Social media e Copywriting) </p>
+                    </div>
                 </div>
             </div>
 
             <div class="plan">
-                <h2>Diamond</h2>
-                <p>Criar um processo único na gestão de redes sociais, criando uma rede exclusiva para sua logistica de pessoas e alcançando o maximo de clientes com nossos serviços, gerando engajamento e vendas para sua Empresa.</p>
-                <h2 class="price">R$ 1.234.99</h2>
-                <div class="plantext">
-                    <h2>O que está incluso ?</h2>
-                    <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias exclusivas para sua empresa</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 2hr/mês </p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:
-                        5 posts 2 reels e 7 stories por semana!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span> 6 rodadas de alteração previstas para cada post</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Gestão de conteúdo pago para impulsionamentos e campanhas de anúncios.</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Criar uma identidade visual e conteúdos exclusivos para sua rede social</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Estratégias e tecnicas de vendas unicas para sua empresa</p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Lógica utilizada para resolver problemas de Bugs em Web sites.
-                    </p>
-                    <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Gestão de Tráfego, Designer Gráfico, Social media, Desenvolvimento Web e Copywriting)</p>
+                <div class="plan_content">
+                    <h2>Diamond</h2>
+                    <p>Criar um processo único na gestão de redes sociais, criando uma rede exclusiva para sua logistica de pessoas e alcançando o maximo de clientes com nossos serviços, gerando engajamento e vendas para sua Empresa.</p>
+                    <h2 class="price">R$ 1.234.99</h2>
+                    <button id="button">O que está incluso ?</button>
+                    <div class="plantext">
+                        <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias exclusivas para sua empresa</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 2hr/mês </p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:
+                            5 posts 2 reels e 7 stories por semana!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span> 6 rodadas de alteração previstas para cada post</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Relatório mensal de medição no nível de desempenho e sucesso do projeto!</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Gestão de conteúdo pago para impulsionamentos e campanhas de anúncios.</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Criar uma identidade visual e conteúdos exclusivos para sua rede social</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Estratégias e tecnicas de vendas unicas para sua empresa</p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Lógica utilizada para resolver problemas de Bugs em Web sites.
+                        </p>
+                        <p><span class="material-symbols-outlined">task_alt</span>Serviços inclusos (Gestão de Tráfego, Designer Gráfico, Social media, Desenvolvimento Web e Copywriting)</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -208,5 +215,6 @@
 
 
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
