--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
             <div class="plan">
                 <div class="plan_content">
                     <h2>Premium</h2>
-                    <p>Otimizar o processo de gestão de redes sociais e construir uma identidade visual profissional e um bom conteúdo de forma ágil em suas redes.</p>
+                    <div class="plan_objective">
+                        <h3><span class="material-symbols-outlined">
+                            rocket_launch
+                            </span> Objetivo</h3>
+                        <p>Otimizar o processo de gestão de redes sociais e construir uma identidade visual profissional e um bom conteúdo de forma ágil em suas redes.</p>
+                    </div>
                     <h2 class="price">R$ 639,99</h2>
                     <button id="button">O que está incluso ? <span class="material-symbols-outlined">
                         expand_more
                         </span></button>
-                    <div class="plantext">
+                    <div class="plan_included">
                         <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégia editorial</p>
                         <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 30min/mês</p>
                         <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:3 posts 1 reels e 3 stories por semana!</p>
@@ -103,13 +108,21 @@
             <div class="plan" id="plan_midle">
                 <div class="plan_content">
                     <h2>Plus</h2>
-                    <p>
-                        impulsionar o processo de gestão de redes sociais, alcançando mais pessoas e
-                        personalizando os nossos serviços para sua empresa, gerando mais engajamento
-                        e clientes nas suas redes sociais.</p>
+
+                    <div class="plan_objective">
+                        <h3><span class="material-symbols-outlined">
+                            rocket_launch
+                            </span> Objetivo</h3>
+                        <p>
+                            Impulsionar o processo de gestão de redes sociais, alcançando mais pessoas e
+                            personalizando os nossos serviços para sua empresa, gerando mais engajamento
+                            e clientes nas suas redes sociais.</p>
+                    </div>
                     <h2 class="price">R$ 979,99</h2>
-                    <button id="button">O que está incluso ?</button>
-                    <div class="plantext">
+                    <button id="button">O que está incluso ?<span class="material-symbols-outlined">
+                        expand_more
+                        </span></button>
+                    <div class="plan_included">
                         <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias personalizadas para sua empresa</p>
                         <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 1hr/mês</p>
                         <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:4 posts 1 reels e 4 stories por semana!</p>
@@ -126,10 +139,18 @@
             <div class="plan">
                 <div class="plan_content">
                     <h2>Diamond</h2>
-                    <p>Criar um processo único na gestão de redes sociais, criando uma rede exclusiva para sua logistica de pessoas e alcançando o maximo de clientes com nossos serviços, gerando engajamento e vendas para sua Empresa.</p>
+                    <div class="plan_objective">
+                        <h3><span class="material-symbols-outlined">
+                            rocket_launch
+                            </span> Objetivo</h3>
+                        <p>Criar um processo único na gestão de redes sociais, criando uma rede exclusiva para sua logistica de pessoas e alcançando o maximo de clientes com nossos serviços, gerando engajamento e vendas para sua Empresa.</p>
+                        
+                    </div>
                     <h2 class="price">R$ 1.234.99</h2>
-                    <button id="button">O que está incluso ?</button>
-                    <div class="plantext">
+                    <button id="button">O que está incluso ?<span class="material-symbols-outlined">
+                        expand_more
+                        </span></button>
+                    <div class="plan_included">
                         <p><span class="material-symbols-outlined">task_alt</span>Definição de estratégias exclusivas para sua empresa</p>
                         <p><span class="material-symbols-outlined">task_alt</span>Reunião de pauta de 2hr/mês </p>
                         <p><span class="material-symbols-outlined">task_alt</span>Desenvolvimento de calendário editorial mensal com:
